[Lightbox] add data-lightbox-def tag to controll loop in modal gallery

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">Todas</li>
+              <li id="allPictures" data-filter="*" class="filter-active">Todas</li>
               <li data-filter=".filter-app">Viviendas</li>
               <li data-filter=".filter-card">Público</li>
               <li data-filter=".filter-web">Parques</li>
@@ -317,11 +317,11 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/app1.jpg" class="img-fluid">
-                <a href="img/portfolio/app1.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/app1.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="viviendas" data-title="App 1" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
               <div class="portfolio-info">
                 <h4><a href="#">App 1</a></h4>
-                <p>App</p>
+                <p>Viviendas</p>
               </div>
             </div>
           </div>
@@ -330,13 +330,13 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="parques" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
 	<!-- Uncomment to enable details icon <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a> -->
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Web 3</a></h4>
-                <p>Web</p>
+                <p>Parques</p>
               </div>
             </div>
           </div>
@@ -345,12 +345,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="viviendas" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">App 2</a></h4>
-                <p>App</p>
+                <p>Viviendas</p>
               </div>
             </div>
           </div>
@@ -359,12 +359,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/card2.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="publico" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Card 2</a></h4>
-                <p>Card</p>
+                <p>Público</p>
               </div>
             </div>
           </div>
@@ -373,12 +373,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="parques" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Web 2</a></h4>
-                <p>Web</p>
+                <p>Parques</p>
               </div>
             </div>
           </div>
@@ -387,12 +387,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="viviendas" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">App 3</a></h4>
-                <p>App</p>
+                <p>Viviendas</p>
               </div>
             </div>
           </div>
@@ -401,12 +401,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="publico" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Card 1</a></h4>
-                <p>Card</p>
+                <p>Público</p>
               </div>
             </div>
           </div>
@@ -415,12 +415,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="publico" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Card 3</a></h4>
-                <p>Card</p>
+                <p>Público</p>
               </div>
             </div>
           </div>
@@ -429,12 +429,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
-                <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox-def="picture" data-lightbox="parques" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
               </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Web 1</a></h4>
-                <p>Web</p>
+                <p>Parques</p>
               </div>
             </div>
           </div>
@@ -522,7 +522,7 @@
   <script src="lib/counterup/counterup.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/isotope/isotope.pkgd.min.js"></script>
-  <script src="lib/lightbox/js/lightbox.min.js"></script>
+  <script src="lib/lightbox/js/lightbox.js"></script>
   <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
