[Portfolio] Cange data filter values

--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li id="allPictures" data-filter="*" class="filter-active">Todas</li>
-              <li data-filter=".filter-app">Viviendas</li>
-              <li data-filter=".filter-card">Público</li>
-              <li data-filter=".filter-web">Parques</li>
+              <li data-filter=".filter-viviendas">Viviendas</li>
+              <li data-filter=".filter-publico">Público</li>
+              <li data-filter=".filter-parques">Parques</li>
             </ul>
           </div>
         </div>
