[Contact]  Url added in order to generate a Contact Mail to arqana.info@gmail.com.

--- a/index.html
+++ b/index.html
@@ -340,10 +340,11 @@
           </div>
         </div>
 
-        <div class="form">
-          <div id="sendmessage">Tu mensaje ha sido enviado. ¡Gracias!</div>
+        <div class="gform">
+          <div id="sendmessage" type="hidden" >Tu mensaje ha sido enviado. ¡Gracias!</div>
           <div id="errormessage"></div>
-          <form action="" method="post" role="form" class="contactForm">
+          <form action="https://script.google.com/macros/s/AKfycbxR4GbtHweH2QQSO6UyC1vUgFP1TJQwSAsFPiZMkKDNkxC3ZiHp/exec" method="post" role="form" class="contactForm">
+
             <div class="form-row">
               <div class="form-group col-md-6">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:3" data-msg="Escriba como mínimo tres caracteres" />
