--- a/index.html
+++ b/index.html
@@ -347,20 +347,20 @@
 
             <div class="form-row">
               <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:3" data-msg="Escriba como mínimo tres caracteres" />
+                <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required />
                 <div class="validation"></div>
               </div>
               <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Debe escriba un email válido" />
+                <input type="email" class="form-control" name="email" id="email" placeholder="Email" required />
                 <div class="validation"></div>
               </div>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" data-rule="minlen:4" data-msg="Debe escribir cuatro caracteres como mínimo" />
+              <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required />
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Escriba un mensaje para que podamos contestearle, por favor" placeholder="Mensaje"></textarea>
+              <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
               <div class="validation"></div>
             </div>
             <div class="text-center"><button type="submit">Enviar mensaje</button></div>
