--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
   <script src="lib/lightbox/js/lightbox.js"></script>
   <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <script src="js/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/portfolio.js"></script>
