--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">Sobre mi</a></li>
           <li><a href="#services">Servicios</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#portfolio">Portafolio</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -297,7 +297,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3 class="section-title">Mi porfolio</h3>
+          <h3 class="section-title">Mi portafolio</h3>
         </header>
 
         <div class="row">
