--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span>100%`</span>
+            <span>100%</span>
             <p>Satisfacción</p>
   				</div>
 
